fix board whitespace

--- a/website/src/App.css
+++ b/website/src/App.css
@@ -3,10 +3,10 @@
 
 .canvas {
   background-color: #FFF2E6;
-  position: relative;
+  position: absolute;
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: scroll;
 }
 
 .container {
